source/app/scss/dashboard/_dashboard.scss
.dashboard, .home, .find-courses {
    .wrapper-header-courses {
      .header-courses {
        text-transform: uppercase;
        text-align: center;
      }
    }
    .listing-courses, .courses-listing {
      .details, .wrapper-messages-primary, .course {
        @include row;
      }

      .wrapper-messages-primary {
        margin-top: $base-margin;
        color: $gray;
      }

      .course {
        border-bottom: 1px solid $light-gray;
        border-top: 1px solid $light-gray;
        margin-top: -1px;

        padding: $base-margin * 2 0;
        position: relative;
        box-sizing: border-box;

        margin: 0;

        .wrapper-course-image {
          @include span-columns(3);
        }

        .wrapper-course-details {
          @include span-columns(9);
        }

        @include media($tablet) {
          .wrapper-course-image {
            @include span-columns(4);
          }

          .wrapper-course-details {
            @include span-columns(6);
          }
        }

        @include media($mobile-l) {
          .wrapper-course-image {
            @include span-columns(12);
          }

          .wrapper-course-details {
            @include span-columns(12);
          }
        }

        .wrapper-course-image {
          text-align: center;
        }

        .wrapper-course-details {

          .course-info {
            margin-bottom: $base-margin;
            .info-university {
              font-weight: bold;
              text-transform: uppercase;
            }
            .info-date-block {
              float: right;
            }
          }

          .course-title {
            // color: $medium-gray;
            word-break: break-all;
            .title-id {
              font-weight: normal;
            }
            a, .title-name {
              // color: $medium-gray;
            }
          }
        }

        .wrapper-course-actions {
          .action {
            .sr {
              display: none;
            }
          }

          .course-actions {
            float: right;
            @include media($mobile-l) {
              width: 100%;
              float: left;
            }

            & > * {
              // float: left;
              margin-right: $button-space * 2;
              &:last-child {
                margin-right: 0;
              }
            }

            .enter-course, .learn-more {
              @include edx-button($yellow);
              @include media($mobile-l) {
                width: 100%;
                margin: 0;
                margin-bottom: $button-space * 2;
              }
              float: right;
              .sr {
                display: none;
              }
            }

            .action-more, .action-facebook, .action-twitter {
              @include edx-transparent-button($dark-gray);
              float: right;
              .sr {
                display: none;
              }
            }
          }

        }

        .learn-more {
          font-size: 1em;
          font-weight: bold;
          @include edx-button($yellow);
        }

        .wrapper-action-more {
          float: right;
          position: relative;

          .actions-dropdown {
            display: none;
            position: absolute;
            top: 45px;
            right: 0;
            background-color: white;
            z-index: 1;
            @include block-frame;

            border-radius: $base-border-radius;

            .action {
              display: block;
              line-height: 1em;
              font-size: 0.9em;
              padding: 0.9em 1.4em;
              font-weight: normal;
              white-space: nowrap;
            }

            &.is-visible {
              display: block;
            }
          }
        }
        .action-upgrade-container {
          .action-upgrade {
            .sr {
              display: none;
            }
            @include edx-button($dark-gray);
            display: inline-block;
          }
        }
      }
    }
}

.profile-sidebar {
  display: none;
}

